# tri

./: Cargo.toml  LICENSE  README.adoc
.github/workflows/: ci.yml
src/: main.rs
